# bullet

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  routes.yaml.example  start.sh
.github/workflows/: ci.yml  docker.yml
app/: config.py  main.py  router.py
app/api/: webhook.py
app/channels/: base.py  feishu.py  resend_email.py
app/models/: alert.py  event.py  routes.py
app/sources/: aliyun_pai.py  base.py  grafana.py
app/templates/: resend_email.html.j2
app/templates/notification_templates/: form.html
app/templates/projects/: detail.html
app/web/: namespaces.py
