[project]
name = "bullet"
version = "0.3.0"
description = "Webhook relay service for alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
bullet = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
